style(AddMovieModal): prevent horizontal overflow in modal content style(index.css): disable tap highlight color for buttons

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@
         outline: none;
         border: none;
         -webkit-appearance: none;
+        -webkit-tap-highlight-color: transparent;
         -moz-appearance: none;
         appearance: none;
         cursor: pointer;
